test/files/neg/t12594.check
child_2.scala:3: error: class Child needs to be abstract.
Missing implementation for member of trait Parent_1:
  def takeMany(x$1: Integer*): Unit = ??? // Integer* does not match String* in `def takeMany(values: String*): Unit`

class Child extends Parent_1 {
      ^
1 error
